syntax = "proto3";

package auth;
option go_package = "service/auth";

service AuthService {
  rpc RegisterUser (RegisterRequest) returns (RegisterResponse);
  rpc LoginUser (LoginRequest) returns (LoginResponse);
  rpc ValidateToken (TokenRequest) returns (TokenResponse);
}

message RegisterRequest {
  string full_name = 1;
  string email = 2;
  string password = 3;
  string phone = 4;
}

message RegisterResponse {
  uint64 user_id = 1;
  string message = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool valid = 1;
}
